--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <span class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none">
-            <img src = "./images/mc_logo.png" id = "mcm" alt = "school logo"/>
+            <img src = "/images/mc_logo.png" id = "mcm" alt = "school logo"/>
             <p><span class="fs-4"><span class = "anton-regular ">McMaster</span> <span class="lead">Blog</span></p>
           </span>
     
@@ -22,10 +22,11 @@
             <li class="nav-item"><a href="/" class="nav-link" aria-current="page" id = "Home">Home</a></li>
             <li class="nav-item"><a href="/food" class="nav-link" id = "Food">Food</a></li>
             <li class="nav-item"><a href="/campus-life" class="nav-link" id = "Campus-life">Campus Life</a></li>
+            <li class="nav-item"><a href = "/admin" class="btn btn-info" id = "delete-enable">Admin</a></li>
+            </li>
           </ul>
         </header>
       </div>
-
 
 <!--@keyframes slideaway {
   from { display: block; }
