--- a/public/style.css
+++ b/public/style.css
@@ -55,17 +55,17 @@ p {
     display: none;
 }
 
-img {
+.pi {
+    margin-bottom: 48px;
     border-radius: 10%;
 }
 
 
-
-#to-left {
+.to-left {
     text-align: left;
 }
 
-#to-right{
+.to-right{
     text-align: right;
 }
 
@@ -75,4 +75,13 @@ img {
         flex-direction: column;
         align-items: center;
     }
+}
+
+#delete-enable {
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border: none;
+    color: white;
 }
