final-version-1 without delete function

--- a/views/campus.ejs
+++ b/views/campus.ejs
@@ -41,7 +41,7 @@
                     </div>
                 <% } else { %>
                     <% if (i < posts.length - 1) {%>
-                        <div class = "container d-flex mb-5 gap-3 flex-row-reverse border-bottom" style = "border-bottom:5px solid rgb(209, 209, 209);">
+                        <div class = "container d-flex mb-5 gap-3 flex-row-reverse" style = "border-bottom:5px solid rgb(209, 209, 209);">
                     <% } else { %>
                         <div class = "container d-flex mb-5 gap-3 flex-row-reverse">
                     <% } %>
