--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,8 +14,7 @@
     <div class="container">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <span class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none">
-            <img src = "/images/mc_logo.png" id = "mcm" alt = "school logo"/>
-            <p><span class="fs-4"><span class = "anton-regular ">McMaster</span> <span class="lead">Blog</span></p>
+            <p><span class="fs-4"><span class = "anton-regular ">Seconds</span> <span class="lead">Blog</span></p>
           </span>
     
           <ul class="nav nav-pills">
