addded padding left

--- a/views/campus.ejs
+++ b/views/campus.ejs
@@ -39,7 +39,9 @@
                                     <button class = "btn btn-danger to-be-delete" style = "margin-bottom: 15px; margin-left: 5px;">- Delete</button>
                                 <% } %>
                             <% } %>
-                            <p class ="lead mb-5"><%= posts[i].comment %></p>
+                            <p class ="lead mb-5" style="
+                            padding-left: 2px;
+                        "><%= posts[i].comment %></p>
                         </div>
                     </div>
                 <% } else { %>
@@ -61,7 +63,9 @@
                                     <button class = "btn btn-danger to-be-delete" style = "margin-bottom: 15px; margin-left: 5px;">- Delete</button>
                                 <% } %>
                             <% } %>
-                            <p class ="lead mb-5"><%= posts[i].comment %></p>
+                            <p class ="lead mb-5" style="
+                            padding-left: 2px;
+                        "><%= posts[i].comment %></p>
                         </div>
                     </div>
                <% } %>
