--- a/views/food.ejs
+++ b/views/food.ejs
@@ -40,7 +40,9 @@
                                         <button class = "btn btn-danger to-be-delete" style = "margin-bottom: 15px; margin-left: 5px;">- Delete</button>
                                     <% } %>
                                 <% } %>
-                                <p class ="lead mb-5"><%= posts[i].comment %></p>
+                                <p class ="lead mb-5" style="
+                                padding-left: 2px;
+                            "><%= posts[i].comment %></p>
                             </div>
                     </div>
                 <% } else { %>
@@ -62,7 +64,9 @@
                                         <button class = "btn btn-danger to-be-delete" style = "margin-bottom: 15px; margin-left: 5px;">- Delete</button>
                                     <% } %>
                                 <% } %>
-                                <p class ="lead mb-5"><%= posts[i].comment %></p>
+                                <p class ="lead mb-5" style="
+                                padding-left: 2px;
+                            "><%= posts[i].comment %></p>
                             </div>
                     </div>
                <% } %>
